# filemanager

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  com.yoyo.FileManager.xml  dbusinterface.cpp  main.cpp  yoyo-filemanager.desktop
debian/: changelog  control  copyright
desktop/: desktop.cpp  desktop.h  desktopview.cpp
filemanager/model/: foldermodel.cpp
qml/: FolderListItem.qml  FolderListView.qml  FolderPage.qml  GlobalSettings.qml  OptionsMenu.qml  PathBar.qml  SideBar.qml  main.qml
qml/Controls/: IconButton.qml
qml/Desktop/: Main.qml  Wallpaper.qml
translations/: en_US.ts  zh_CN.ts
